# itf

./: .bazeliskrc  .bazelrc  .gitignore  BRANCH_README.md  BUILD  COMPARISON_IDEAL_VS_CURRENT.md  ITF_V2_ARCHITECTURE.md  ITF_V2_IMPLEMENTATION.md  ITF_V2_QUICKSTART.md  MODULE.bazel  PLUGIN_LOADING_GUIDE.md  QUICK_WIN_REFACTORING_PATTERN.md  README.md  README_ITF_V2.md  defs.bzl  main.py  pyproject.toml  pytest.ini  requirements.in  requirements_lock.txt  requirements_lock_3_10.txt  requirements_lock_3_12.txt  versions.json
.github/workflows/: docs.yml  itf-examples.yml  itf-qnx.yml  itf.yml
FrameWorkRevamp/: Plan.md  README.md  pyproject.toml
FrameWorkRevamp/docs/: ctf-pitch.html
FrameWorkRevamp/examples/: __init__.py  conftest.py  test_example.py
FrameWorkRevamp/examples/ecosystem/: __init__.py  capability_doip.py  capability_ssh.py  capability_uds.py  lifecycle_artifacts.py  target_ecu.py
FrameWorkRevamp/src/ctf/: __init__.py  assembly.py  contracts.py  descriptor.py  diagnostics.py  dut.py  errors.py  lifecycle.py  pytest_plugin.py  registry.py  resolver.py  steps.py  target.py
FrameWorkRevamp/tests/: conftest.py  test_assembly.py  test_contracts.py  test_descriptor.py  test_dut.py  test_lifecycle.py  test_pytest_plugin.py  test_reentrancy.py  test_registry.py  test_resolver.py  test_runmode.py  test_steps.py  test_tiers.py
FrameWorkRevampGovernance/: README.md  pyproject.toml
FrameWorkRevampGovernance/src/ctf_governance/: __init__.py  catalog.py  cli.py  collector.py  naming.py  plugin.py
FrameWorkRevampGovernance/tests/: conftest.py  test_catalog.py  test_cli.py  test_collector.py  test_naming.py  test_plugin.py  test_scenario_contract_demo.py
FrameWorkRevampGovernance/tests/plugins/: bad_namespace.py  collide_a.py  collide_b.py  dangling.py  dup_a.py  dup_b.py  good.py
bazel/: BUILD  py_itf_plugin.bzl  py_itf_test.bzl  py_itf_unittest.bzl  py_sctf_test.bzl  sctf_image.bzl
bazel/rules/: as_exec.bzl
cli/: config.yaml
config/: BUILD  target_config.json
docs/: QEMU_SERIAL_SUPPORT.md  conf.py  index.rst
docs/concepts/: architecture.rst  index.rst  itf_architecture.puml
docs/decisions/: DR-001-infra.md  index.rst
docs/how-to/: adopt_itf.md  get_started.md  index.rst  plugins.md  write_tests.md
docs/manual/: index.rst
docs/reference/: bazel_macros.rst  index.rst  plugins.rst
docs/release/: index.rst
docs/safety_mgt/: index.rst
docs/security_mgt/: index.rst
docs/verification_report/: index.rst
examples/: .bazelrc  MODULE.bazel
examples/contract_middleware/: conftest.py  test_middleware.py
examples/examples/cpp/: BUILD  main.cpp  test.cpp
examples/examples/ctf/levels/artifact_compression/: conftest.py  pytest.ini  test_artifact_compression.py  test_plugin_conflicts.py
examples/examples/ctf/levels/decoupling/: capability_shell.py  conftest.py  echo_scenario.py  pytest.ini  target_box.py  test_decoupled.py
examples/examples/ctf/levels/docker/: conftest.py  pytest.ini  test_docker.py
examples/examples/ctf/levels/integration/: conftest.py  pytest.ini  test_capabilities.py
examples/examples/ctf/levels/scenario/: conftest.py  pytest.ini  test_echo.py
examples/examples/ctf/levels/ssh_demo/: conftest.py  pytest.ini  target_sealed_a.py  target_sealed_b.py  test_ssh.py
examples/examples/ctf/plugins/: artifact_compression.py  capability_gate.py  host.py
examples/examples/ctf/plugins/capabilities/: __init__.py  exec.py  file_transfer.py  network.py  ping.py  restart.py  ssh.py
examples/examples/ctf/plugins/scenarios/: __init__.py  echo.py
examples/examples/ctf/plugins/security/: __init__.py  token.py
examples/examples/ctf/plugins/targets/: __init__.py  docker.py  mock.py  subprocess.py
examples/examples/docker/: BUILD
examples/examples/itf/: BUILD  conftest.py  qnx  test_composition.py  test_dlt.py  test_docker.py  test_example_app.py  test_fault_recovery.py  test_qemu.py  test_sctf_example_app.py  test_ssh.py
examples/governance_protocols/: conftest.py  contracts.py  test_automation.py
examples/logger_demo/: conftest.py  test_sample.py
examples/multi_anchor/: README.md  conftest.py  test_multi_soc.py
examples/plugins/: hello_world.py
itf/core/base/: BUILD  (+2 more)
itf/plugins/: BUILD  core.py  docker.py  plugins.bzl
main/: genindex.html  index.html  metrics.json  needs.json  objects.inv  search.html  searchindex.js
main/concepts/: architecture.html  index.html
main/decisions/: DR-001-infra.html  index.html
main/how-to/: get_started.html  index.html  plugins.html  write_tests.html
main/manual/: index.html
main/reference/: bazel_macros.html  index.html  plugins.html
main/release/: index.html
main/safety_mgt/: index.html
main/security_mgt/: index.html
main/verification_report/: index.html
sandbox/: conftest.py  test_example.py  workflow_playground.py
score/itf/: BUILD  runner.py
score/sctf/: BUILD  README.md  __init__.py  bootstrap.py  config.py  pytest.ini
scripts/: BUILD  run_in_network_namespace.sh  run_under_qemu.sh
tasks/: todo.md
test/: BUILD  conftest.py  dlt_config.json  test_attribute_plugin.py  test_dlt.py  test_dlt_on_target.py  test_docker.py  test_hello_sctf.py  test_ping.py  test_qemu.py  test_qemu_config_schema.py  test_rules_are_working_correctly.py  test_sctf_component.py  test_simple_environment.py  test_ssh.py  test_ssh_bridge_network.py  test_ssh_port_forwarding.py  test_tcpdump.py
test/integration/: BUILD  conftest.py  test_async_exec.py  test_dlt.py  test_dlt_on_target.py  test_docker.py  test_qemu.py  test_qemu_config_schema.py  test_rules_are_working_correctly.py  test_ssh.py
test/resources/: BUILD  qemu_bridge_config.json  qemu_serial_config.json
test/unit/: BUILD  test_ctf_kernel_migration.py  test_device_model.py  test_dut_aliases.py  test_dut_inspect.py  test_governance.py  test_lifecycle_hooks.py  test_logger_plugin.py  test_multi_anchor.py  test_ping.py  test_plugin_composition.py  test_qemu_config_schema.py  test_registry_bindings.py
tests/: test_itf_v2_example.py
tools/: qnx_credential_helper.py
tools/format/: BUILD
tools/lint/: linters.bzl
(+212 files in other folders)
