# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_itf",
    version = "0.1.0",
    compatibility_level = 0,
)

###############################################################################
#
# Python version
#
###############################################################################
bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

###############################################################################
#
# PIP dependencies
#
###############################################################################
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "itf_pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "itf_pip")

###############################################################################
#
# Buildifier dependency
# Provides formatting and linting of Bazel files.
#
###############################################################################
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

###############################################################################
#
# Generic linting and formatting rules
#
###############################################################################
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc9")
git_override(
    module_name = "aspect_rules_lint",
    commit = "b5dfbc12754d6698c36d0aaad46183e730dac85c",
    remote = "https://github.com/ltekieli/rules_lint.git",
)

###############################################################################
#
# C++ rules
#
###############################################################################
bazel_dep(name = "rules_cc", version = "0.1.1")

###############################################################################
#
# Shell dependency
#
###############################################################################
bazel_dep(name = "rules_shell", version = "0.6.0")

###############################################################################
#
# Container dependencies
#
###############################################################################
bazel_dep(name = "rules_oci", version = "1.8.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "ubuntu_24_04",
    digest = "sha256:2e863c44b718727c860746568e1d54afd13b2fa71b160f5cd9058fc436217b30",
    image = "ubuntu",
    platforms = ["linux/amd64"],
    tag = "24.04",
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "ubuntu_24_04")

###############################################################################
#
# Packaging dependencies
#
###############################################################################
bazel_dep(name = "rules_pkg", version = "1.0.1")

###############################################################################
#
# Score custom modules loading
#
###############################################################################
bazel_dep(name = "score_tooling", version = "1.0.4")

################################################################################
#
# Load DLT dependencies
#
################################################################################
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "dlt_daemon",
    branch = "master",
    build_file = "//third_party/dlt:dlt_daemon.BUILD",
    patch_args = ["-p1"],
    patches = [
        "//third_party/dlt:0000-initialize-global-vars.patch",
        "//third_party/dlt:0001-enable-multicast-udp.patch",
    ],
    remote = "https://github.com/draganbjedov/dlt-daemon.git",
)
