# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_itf_examples",
    version = "0.1",
    compatibility_level = 0,
)

###############################################################################
#
# Python version
#
###############################################################################
bazel_dep(name = "rules_python", version = "1.0.0")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

###############################################################################
#
# LLVM Toolchains
#
###############################################################################
bazel_dep(name = "toolchains_llvm", version = "1.2.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    cxx_standard = {"": "c++17"},
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

###############################################################################
#
# C++ rules
#
###############################################################################
bazel_dep(name = "rules_cc", version = "0.2.17")

###############################################################################
#
# Shell dependency
#
###############################################################################
bazel_dep(name = "rules_shell", version = "0.6.1")

###############################################################################
#
# Container dependencies
#
###############################################################################
bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "ubuntu_24_04_examples",
    digest = "sha256:2e863c44b718727c860746568e1d54afd13b2fa71b160f5cd9058fc436217b30",
    image = "ubuntu",
    platforms = ["linux/amd64"],
    tag = "24.04",
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "ubuntu_24_04_examples", "ubuntu_24_04_examples_linux_amd64")

###############################################################################
#
# Packaging dependencies
#
###############################################################################
bazel_dep(name = "rules_pkg", version = "1.2.0")

###############################################################################
#
# Google Test dependency
#
###############################################################################
bazel_dep(name = "googletest", version = "1.17.0")

################################################################################
#
# Load QNX dependencies
#
################################################################################
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.0")

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc")
gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.3",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_qcc_x86_64_toolchain",
    "score_qcc_x86_64_toolchain_pkg",
)

bazel_dep(name = "score_rules_imagefs", version = "0.0.3")

imagefs = use_extension("@score_rules_imagefs//extensions:imagefs.bzl", "imagefs")
imagefs.toolchain(
    name = "score_qnx_x86_64_ifs_toolchain",
    sdp_to_import = "@score_qcc_x86_64_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    type = "ifs",
)
use_repo(imagefs, "score_qnx_x86_64_ifs_toolchain")

###############################################################################
#
# ITF dependency
#
###############################################################################
bazel_dep(name = "score_itf")
local_path_override(
    module_name = "score_itf",
    path = "../",
)
